Possibility to copy a photo's metadata to the other photos